Correctly catch offscreen panels when building the exclude list for workArea().

BUG:328035